(library
   (name TestReasonmlHedgehog)
   (public_name reasonml-hedgehog-tests.lib)
   ; the linkall flag ensures that all of our tests are compiled and the
   ; -g flag emits debugging information
   (ocamlopt_flags -linkall -g)
   ; you will want to depend on the library you are testing as well, however for
   ; the purposes of this example we are only depending on the test runner itself
   (libraries reasonml-hedgehog.lib rely.lib console.lib )
   (modules (:standard \ RunTests))
)

(executable
   (package reasonml-hedgehog-tests)
   (modes byte native)
   ; The entrypoint module
   (name RunTests)  ;  From package.json main field
   ; The name of the executable (runnable via esy x RunTests.exe)
   (public_name RunTests.exe)  ;  From package.json name field
   (libraries  reasonml-hedgehog-tests.lib ) ;  From package.json require field (array of strings)
   (modules RunTests)
)

(alias
   (name runtest)
   (action (run ./RunTests.exe)))
